add scam knowlede for users
